--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "NODE_ENV=production NODE_OPTIONS='--loader ts-node/esm' webpack build --config configs/webpack.config.ts",
     "build:csr": "NODE_ENV=production NODE_OPTIONS='--loader ts-node/esm' webpack build --config configs/webpack.config.csr.ts",
     "build:ssr": "NODE_ENV=production NODE_OPTIONS='--loader ts-node/esm' webpack build --config configs/webpack.config.ssr.ts",
+    "build:server": "NODE_OPTIONS='--loader ts-node/esm' webpack build --config configs/webpack.config.node.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -43,6 +44,7 @@
     "react-router-dom": "^6.4.3",
     "response-format": "^1.2.0",
     "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "webpack": "^5.75.0",
@@ -65,7 +67,6 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.6.1",
-    "socket.io-client": "^4.5.3",
     "terser-webpack-plugin": "^5.3.6",
     "thread-loader": "^3.0.4",
     "webpack-node-externals": "^3.0.0"
